# GEANT4-Simulation-for-the-EIC-EEEMCal

./: CMakeLists.txt  README  ecalSim.cc  energyResolution.py  plot_energy_histograms_with_crystalball_fits.py
include/: ActionInitialization.hh  DetectorConstruction.hh  EcalHit.hh  EcalSD.hh  EventAction.hh  PrimaryGeneratorAction.hh  README  RunAction.hh
macros/: README  init_vis.mac  run.mac  run_job.mac  vis.mac
src/: ActionInitialization.cc  DetectorConstruction.cc  EcalHit.cc  EcalSD.cc  EventAction.cc  PrimaryGeneratorAction.cc  README  RunAction.cc
